# dependency-monitor

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.local.json
accounts/: fields.py  models.py  views.py
accounts/migrations/: 0001_initial.py  0002_add_graph_api_fields.py  0003_remove_emailsettings_smtp_host_and_more.py  0004_encrypt_graph_client_secret.py  0005_encrypt_existing_secrets.py
accounts/services/: email_backend.py
compliance/tools/: __init__.py  _url_validation.py  adverse_media_searcher.py  pep_screener.py  sanctions_checker.py  wwft_legislation_fetcher.py
config/: settings.py  urls.py
dashboard/: admin.py  apps.py  constants.py  crew_builder.py  middleware.py  models.py  tool_registry.py  urls.py  views.py
dashboard/migrations/: 0001_initial.py  0002_scanjob.py  0003_add_scanlog.py  0004_add_fiscal_models.py  0005_add_scanjob_progress_fields.py  0006_add_team_builder.py  0007_seed_builtin_teams.py  0008_add_article_structured_fields.py  0009_add_compliance_section.py  0010_seed_compliance_sections.py  0011_add_compliance_report.py  0012_add_compliance_section_version.py  0013_prospectgroup_prospect_placessearch.py  0014_salesdiary.py  0015_responsetemplate_prospectresponse.py  0016_seed_response_templates.py  0017_add_not_contacted_status_and_business_type.py  0018_seed_business_types.py  0021_templatecategory.py  (+63 more)
docs/: rj_richtlijnen.md
fiscal/: crew.py  run.py
monitor/: crew.py  run.py
samenstellen/: apps.py  models.py  urls.py  views.py
scripts/: setup_task_scheduler.bat
templates/: 404.html  500.html
(+133 files in other folders)
