[project]
name = "dependency-monitor"
version = "1.0.0"
description = "Agentic dependency monitor - proactief monitoren op API deprecations, security vulnerabilities en breaking changes"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "django-htmx",
    "django-environ",
    "crewai[tools]>=0.86.0",
    "requests>=2.31.0",
    "packaging>=24.0",
    "pydantic>=2.10",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "beautifulsoup4>=4.12.0",
    "markdown2>=2.5.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
